third_year/programming_languages_and_paradigms/project_2/PL-version/examples/good/z-poprawna-interferencja-1.hml
let id x = x in
id 5