third_year/programming_languages_and_paradigms/project_2/PL-version/examples/bad/niezgodne-typy-3.hml
let identity x = x in
[[identity], identity]